# mimi

./: .dockerignore  .gitignore  .rustfmt.toml  CMakeLists.txt  Cargo.toml  Dockerfile  README.md  build.rs  create_github_issues.py  docker-compose.override.yml  docker-compose.yml  planning.txt
.github/workflows/: ci.yml  cpp-build.yml  docker-build.yml
.planning/: INDEX.md  TASKLIST.md
.planning/milestones/: M1-FOUNDATION.md  M2-PANDORA.md  M3-SECURITY.md  M4-ECHIDNA.md
.planning/modules/: ECHIDNA.md
.planning/practical/: M1-PRACTICAL-GUIDE.md
.planning/specs/: BUS-PROTOCOL.md  SECURITY-MODEL.md
.sisyphus/plans/: M1.5.4-implementation.md  M1.5.5-implementation.md
config/: zenoh-m1.toml
crates/mimi-cli/: Cargo.toml
crates/mimi-cli/benches/: auth_benchmarks.rs  cli_benchmarks.rs
crates/mimi-cli/src/: lib.rs  logger.rs  main.rs  parser.rs
crates/mimi-cli/src/ai/: adapter.rs  adaptive_timeout.rs  config.rs  error.rs  factory.rs  gemini_adapter.rs  gemini_client.rs  health.rs  health_checker.rs  mod.rs  ollama_adapter.rs  ollama_client.rs  performance.rs  performance_tracker.rs  priority_config.rs  prompt_templates.rs  registry.rs  retry_strategy.rs
crates/mimi-cli/src/auth/: error.rs  extractors.rs  manager.rs  middleware.rs  mod.rs  token.rs  types.rs
crates/mimi-cli/src/cli/: commands.rs  error.rs  formatter.rs  handler.rs  mod.rs
crates/mimi-cli/src/config/: defaults.rs  loader.rs  mod.rs
crates/mimi-cli/src/repl/: completion.rs  editor.rs  loop.rs  mod.rs  special_commands.rs
crates/mimi-cli/src/ws/: error.rs  handlers.rs  mod.rs  streaming.rs  types.rs  validation.rs
crates/mimi-cli/tests/: ai_adapter_config_tests.rs  ai_adapter_factory_tests.rs  ai_adapter_registry_integration.rs  ai_adapter_registry_tests.rs  ai_gemini_adapter_tests.rs  ai_ollama_adapter_tests.rs  ai_performance_integration.rs  auth_integration_tests.rs  cli_backend_auth_integration_tests.rs  cli_error_handling_integration_tests.rs  cli_integration_tests.rs  cli_integration_utils.rs  cli_load_tests.rs  cli_memory_profiling.rs  cli_workflow_integration_tests.rs  e2e_cli_workflow.rs  e2e_error_scenarios.rs  e2e_full_stack.rs  e2e_http_flow.rs  e2e_input_validation.rs  e2e_message_bus_integration.rs  e2e_websocket_flow.rs  repl_integration_tests.rs  ws_integration_tests.rs
crates/mimi-core/: Cargo.toml
crates/mimi-core/src/: config.rs  error.rs  health_monitor.rs  lib.rs  message.rs  pandora_client.rs  routing.rs  serialization.rs  state_machine.rs  zenoh_bus.rs
crates/mimi-core/tests/: acceptance_tests.rs  integration.rs  integration_tests.rs  routing_integration_tests.rs  state_machine_tests.rs
crates/pandora-memory/: BUILD.md  CMakeLists.txt  README.md  build.sh
crates/pandora-memory/include/: lru_cache.hpp  pandora_memory.hpp
crates/pandora-memory/src/: lru_cache.cpp  pandora_memory.cpp
crates/pandora-memory/tests/: test_lru_cache.cpp  test_memory_manager.cpp
docker/: README.md
docs/: M1.2.1-FLATBUFFERS-SCHEMA.md  M1.2.2-MESSAGE-BUS-SELECTION.md  M1.2.3-ZENOH-CLIENT-LIBRARY.md  M1.4.2-CLI-IMPLEMENTATION.md  M1.4.3-REPL-IMPLEMENTATION.md  M1.4.5-WEBSOCKET-IMPLEMENTATION.md  M1.4.6-INTEGRATION-AUTH.md  M1.4.7-CLI-INTEGRATION-TESTS.md  M1.4.8-PERFORMANCE-REPORT.md  M1.5.1-AI-ADAPTER-INTERFACE.md  M1.5.2-GEMINI-ADAPTER.md  M1.5.3-OLLAMA-ADAPTER.md  M1.5.4-ADAPTER-REGISTRY.md  M1.5.5-PERFORMANCE-MONITORING.md  M1.6-M2-LANDSCAPE.md  README.md
docs/plans/: 2026-04-17-M1.2.6-message-routing-design.md  2026-04-17-M1.2.6-message-routing-implementation.md  2026-04-17-M1.3.1-state-machine-design.md  2026-04-17-M1.3.2-state-machine-implementation.md  2026-04-17-M1.4.1-beatrice-cli-design.md  2026-04-17-M1.4.2-beatrice-cli-implementation.md  2026-04-17-M1.4.3-beatrice-repl-implementation.md  2026-04-17-M1.4.4-beatrice-http-implementation.md  2026-04-17-M1.4.5-beatrice-websocket-implementation.md  2026-04-18-M1.4.6-beatrice-integration-auth.md  2026-04-18-M1.4.7-beatrice-cli-integration-tests.md  2026-04-18-M1.4.8-beatrice-performance-load-testing.md  2026-04-18-M1.5.1-ai-adapter-interface-design.md  2026-04-18-M1.5.2-gemini-adapter-implementation.md  M1.6.1-e2e-integration-tests.md
planning/: PROJECT.md  README.md  REQUIREMENTS.md  TASKLIST.md
planning/examples/: INTEGRATION-WALKTHROUGH.md  MESSAGE-FLOWS.md  gating.toml  liliana.toml  persona.toml
planning/milestones/: M2-PANDORA.md  M3-SECURITY.md
planning/modules/: BEATRICE.md  LILIANA.md  MIMI-COMMANDER.md  ODLAGUNA.md  PANDORA-ARCHITECTURE.md  PANDORA.md  PRISCILLA.md  RYZU.md
planning/practical/: M2-PRACTICAL-GUIDE.md
planning/specs/: AI-ADAPTERS.md  GATING-SYSTEM.md  HEATMAP-ALGORITHM.md  PERSONA-INJECTION.md  SKILL-LIFECYCLE.md
proto/: metadata.fbs  schema.fbs
scripts/: generate_cpp_bindings.py  validate_schemas.py
src/: README.md  bus.rs  lib.rs  protocol.rs
tests/: README.md  zenoh_integration_tests.rs
