[workspace]
members = ["crates/mimi-core", "crates/mimi-cli"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["DevScafe Community <contact@devscafe.com>"]
license = "MIT"
repository = "https://github.com/devscafecommunity/mimi"

[workspace.dependencies]
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
prost = "0.12"
prost-build = "0.12"
thiserror = "1.0"
anyhow = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
num_cpus = "1.16"
tokio-test = "0.4"
flatbuffers = "24.3"
flatbuffers-build = "24.3"
zenoh = { version = "0.10", features = ["macros"] }

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = "unwind"

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = "abort"
codegen-units = 1

[profile.test]
opt-level = 1
debug = true
debug-assertions = true
overflow-checks = true

[profile.bench]
opt-level = 3
debug = false
lto = true
codegen-units = 1
