[package]
name = "mimi-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "mimi"
path = "src/main.rs"

[dependencies]
mimi-core = { path = "../mimi-core" }
tokio = { workspace = true }
clap = { workspace = true, features = ["derive"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0"
log = { workspace = true }
env_logger = { workspace = true }
toml = "0.8"
colored = "2.1"
rustyline = "14.0"
thiserror = { workspace = true }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.8"
