[package]
name = "mimi-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "mimi"
path = "src/main.rs"

[dependencies]
mimi-core = { path = "../mimi-core" }
tokio = { workspace = true }
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
log.workspace = true
env_logger.workspace = true
actix-web = "4.4"
actix-web-actors = "4.2"
actix = "0.13"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "9.0"
argon2 = "0.5"
thiserror.workspace = true
futures = "0.3"
tempfile = "3.8"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "cli_benchmarks"
harness = false

[[bench]]
name = "auth_benchmarks"
harness = false
