[package]
name = "mimi-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
prost.workspace = true
thiserror.workspace = true
anyhow.workspace = true
uuid.workspace = true
chrono.workspace = true
log.workspace = true
num_cpus = "1.16"
rand = "0.8"

[dev-dependencies]
tokio-test = "0.4"

[[test]]
name = "integration"
path = "tests/integration.rs"
